# Yacht_Dice_C

./: .gitignore  API.MD  CMakeLists.txt  LICENSE  README.md  api.txt  main.cpp  prtest.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CD.yml  CI.yml  codeql-analysis.yml  upload_to_server.yml
Client/: CMakeLists.txt  Room.hpp  game.cpp  game.hpp  graphic.cpp  graphic.hpp  main  main.cpp  network.cpp  network.hpp  user.cpp
Client/main.dSYM/Contents/Resources/DWARF/: main
Client/tests/: CMakeLists.txt  testfile.cpp
Server/: CMakeLists.txt  Room.hpp  game_server.cpp  game_server.hpp  game_server_parse.cpp  game_server_parse.hpp  main  main.cpp  send_struct.hpp  server.cpp  server.hpp  user.hpp
Server/main.dSYM/Contents/Resources/DWARF/: main
common/: Room.cpp  Room.hpp  dice_game.cpp  dice_game.hpp  function.hpp  scoreboard.cpp  scoreboard.hpp  strparse.hpp  user.cpp  user.hpp
tests/: CMakeLists.txt  main.cpp  scoreboardTest.cpp  serverSendString.cpp  test1.cpp
